# remotecontrol

./: .gitignore  AGENTS.md  CHANGES.md  CMakeLists.txt  KEYBOARD_HOOK_FIX.md  KEYBOARD_HOOK_INTEGRATION.md  README.md  THANKS  buildbase.py  run.py
cmake/: FindCLI11.cmake  FindWebRTC.cmake
config/: config.ini
doc/: BUILD.md  BUY_JETSON.md  FAQ.md  KEYBOARD_HOOK.md  LIBCAMERA.md  LINUX_VIDEO_DEVICE.md  SETUP_JETSON.md  SETUP_MAC.md  SETUP_RASPBERRY_PI.md  SETUP_UBUNTU.md  SETUP_WINDOWS.md  USE.md  USE_AYAME.md  USE_METRICS.md  USE_P2P.md  USE_SDL.md  USE_SERIAL.md  USE_SORA.md  VPL.md
html/: webrtc.js
src/: fix_cuda_noinline_macro_error.h  main.cpp  momo_args.h  momo_svc.cpp  momo_svc.h  momo_version.cpp  ssl_verifier.cpp  ssl_verifier.h  url_parts.h  util.cpp  util.h  video_codec_info.h  watchdog.h  websocket.cpp  websocket.h
src/ayame/: ayame_client.cpp  ayame_client.h
src/mac_helper/: mac_capturer.mm  macos_version.mm
src/metrics/: metrics_session.cpp  metrics_session.h
src/p2p/: p2p_session.cpp  p2p_session.h  p2p_websocket_session.cpp  p2p_websocket_session.h
src/remote/common/: geometry.h
src/remote/data_channel/: input_data_manager.h
src/remote/input_receiver/: input_dispatcher.h  input_injector.h
src/remote/input_sender/: mouse_mapper.h  sdl_input_capture.h
src/remote/overlay/: overlay_renderer.h  virtual_keyboard_full.h
src/remote/platform/windows/: cursor_monitor_win.h  ime_monitor_win.h  input_injector_win.h
src/remote/proto/: base64.h  messages.h  parser.h  protobuf_serializer.h  remote_input.proto  serializer.h  xusb.h
src/remote/session/: handshake.h
src/rtc/: aligned_encoder_adapter.cpp  device_video_capturer.cpp  fake_audio_capturer.cpp  fake_audio_capturer.h  fake_video_capturer.cpp  fake_video_capturer.h  momo_video_decoder_factory.cpp  momo_video_encoder_factory.cpp  peer_connection_observer.cpp  peer_connection_observer.h  rtc_connection.cpp  rtc_data_manager.h  rtc_manager.cpp  rtc_manager.h  rtc_ssl_verifier.cpp  screen_video_capturer.cpp  screen_video_capturer.h  video_track_receiver.h
src/sdl_renderer/: keyboard_hook.cpp  keyboard_hook.h  sdl_renderer.cpp  sdl_renderer.h
src/serial_data_channel/: serial_data_manager.cpp
src/sora/: sora_client.cpp  sora_client.h  sora_data_channel.h  sora_session.h
src/sora-cpp-sdk/: README.md  copy-from-sora-cpp-sdk.sh  copy-to-sora-cpp-sdk.sh  diff-momo.sh  diff-sora-cpp-sdk.sh  update-last-updated.sh
src/sora-cpp-sdk/include/sora/: cuda_context.h  fix_cuda_noinline_macro_error.h  vpl_session.h
src/sora-cpp-sdk/include/sora/dyn/: dyn.h
src/sora-cpp-sdk/include/sora/hwenc_v4l2/: libcamera_capturer.h  v4l2_buffers.h  v4l2_converter.h  v4l2_native_buffer.h
src/sora-cpp-sdk/include/sora/v4l2/: v4l2_device.h
src/sora-cpp-sdk/src/: cuda_context_cuda.cpp  open_h264_video_encoder.cpp  scalable_track_source.cpp
src/sora-cpp-sdk/src/hwenc_jetson/: jetson_buffer.cpp  jetson_jpeg_decoder_pool.cpp  jetson_v4l2_capturer.cpp  jetson_video_decoder.cpp  jetson_video_encoder.cpp
src/sora-cpp-sdk/src/hwenc_nvcodec/: nvcodec_decoder_cuda.cpp  nvcodec_v4l2_capturer.cpp  nvcodec_video_decoder.cpp  nvcodec_video_encoder.cpp  nvcodec_video_encoder_cuda.cpp  nvcodec_video_encoder_cuda.h
src/sora-cpp-sdk/src/hwenc_v4l2/: libcamera_capturer.cpp  v4l2_converter.cpp  v4l2_native_buffer.cpp
src/sora-cpp-sdk/src/hwenc_vpl/: vpl_video_decoder.cpp  vpl_video_encoder.cpp
src/sora-cpp-sdk/src/v4l2/: v4l2_device.cpp  v4l2_video_capturer.cpp
test/: .env.template  README.md  conftest.py  momo.py  test_ayame_mode.py  test_metrics_api.py  test_momo_validation.py  test_p2p_mode.py  test_sora_mode.py  test_sora_mode_apple_video_toolbox.py  test_sora_mode_intel_vpl.py  test_sora_mode_nv12.py  test_sora_mode_nvidia_video_codec.py  test_sora_mode_openh264.py  test_sora_mode_raspberry_pi.py  test_sora_mode_sendonly_recvonly.py  test_sora_mode_sendrecv.py  test_sora_mode_simulcast.py
